feat: adicionar rota, handler e repository getByUser para utilizar o service de getBy
