# src/config/swagger.yaml
@@ -49,13 +49,8 @@ paths:
       tags:
         - "Users"
       x-swagger-router-controller: app
-      summary: list User
+      summary: list users
       operationId: listUserHandler
-      parameters:
-        - name: user_id
-          in: query
-          type: string
-          required: false
       responses:
         200:
           description: "success"
@@ -81,6 +76,23 @@ paths:
           schema:
             $ref: "#/definitions/user"
   /user/{id}:
+    get:
+      tags:
+        - "Users"
+      x-swagger-router-controller: app
+      summary: get user by id
+      operationId: listUserByIdHandler
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          required: true
+          description: User ID
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/user"
     put:
       tags:
         - "Users"
@@ -122,10 +134,11 @@ paths:
       summary: delete user
       operationId: deleteUserHandler
       parameters:
-        - name: user_id
-          in: query
+        - name: id
+          in: path
           type: integer
           required: true
+          description: User ID
       responses:
         200:
           description: "success"
